fixed column header align

--- a/css/style.css
+++ b/css/style.css
@@ -77,9 +77,8 @@ td{
   color: #FFFFFF;
   min-width: 125px;
   padding: 10px;
-  display: relative;
   text-align: center;
-  vertical-align: center;
+  vertical-align: middle;
   background-color: #7e0825;
   text-transform: uppercase;
 }
